[gd_scene format=3 uid="uid://bt5jx3rcs08nq"]

[ext_resource type="Script" uid="uid://cl6feyb7h6ita" path="res://Menus/achievements_menu.gd" id="1_0ktq4"]
[ext_resource type="Texture2D" uid="uid://dxd3yyn7or1a4" path="res://Assets/adum.png" id="2_666w4"]
[ext_resource type="Theme" uid="uid://biakj4sw07nf" path="res://theme.tres" id="3_k03y4"]

[sub_resource type="LabelSettings" id="LabelSettings_0ktq4"]
font_size = 57
font_color = Color(0.20702112, 0.17958343, 0.18189403, 1)
shadow_size = 23
shadow_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fu7sn"]
font_size = 54
font_color = Color(0, 0, 0, 1)
outline_size = 28
outline_color = Color(0.8533018, 0.36928457, 0.14164355, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6uew"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37181717, 3.7902967e-07, 4.813075e-08, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 60
corner_radius_bottom_left = 20

[node name="Achievements" type="Control" unique_id=327771935]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ktq4")

[node name="Background" type="TextureRect" parent="." unique_id=2112020329]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_666w4")
stretch_mode = 1

[node name="Noob" type="Label" parent="." unique_id=680562276]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "It's looking a bit empty here...
Maybe if you were good..."
label_settings = SubResource("LabelSettings_0ktq4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="." unique_id=886010733]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -532.0
offset_right = 386.0
offset_bottom = -453.0
grow_horizontal = 2
grow_vertical = 2
text = "Achievements"
label_settings = SubResource("LabelSettings_fu7sn")
horizontal_alignment = 1

[node name="Back" type="Button" parent="." unique_id=109784]
layout_mode = 0
offset_left = 1639.0
offset_top = 982.0
offset_right = 1908.0
offset_bottom = 1066.0
theme = ExtResource("3_k03y4")
text = "Back"

[node name="PrevPage" type="Button" parent="." unique_id=810350985]
layout_mode = 0
offset_left = 668.0
offset_top = 982.0
offset_right = 937.0
offset_bottom = 1066.0
theme = ExtResource("3_k03y4")
text = "<----"

[node name="NextPage" type="Button" parent="." unique_id=2041660958]
layout_mode = 0
offset_left = 974.0
offset_top = 982.0
offset_right = 1243.0
offset_bottom = 1066.0
theme = ExtResource("3_k03y4")
theme_override_styles/normal = SubResource("StyleBoxFlat_b6uew")
text = "---->"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PrevPage" to="." method="_on_prev_page_pressed"]
[connection signal="pressed" from="NextPage" to="." method="_on_next_page_pressed"]
